// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinearInputControl Init should work 1`] = `
<body>
  <div>
    <div>
      <input
        class="linearslider"
        id="linearrangeinput"
        max="1000"
        min="1"
        type="range"
        value="0"
      />
      <label
        class="LinearRangeLabel"
        id="lrclabel"
      >
        0
      </label>
    </div>
  </div>
</body>
`;

exports[`LinearInputControl Refresh Data should work 1`] = `
<body>
  <div>
    <div>
      <input
        class="linearslider"
        id="linearrangeinput"
        max="1000"
        min="1"
        type="range"
        value="0"
      />
      <label
        class="LinearRangeLabel"
        id="lrclabel"
      >
        500.5
      </label>
    </div>
  </div>
</body>
`;

exports[`LinearInputControl Slider should work 1`] = `
<body>
  <div>
    <div>
      <input
        class="linearslider"
        id="linearrangeinput"
        max="1000"
        min="1"
        type="range"
        value="0"
      />
      <label
        class="LinearRangeLabel"
        id="lrclabel"
      >
        700
      </label>
    </div>
  </div>
</body>
`;

exports[`LinearInputControl Update View should Work 1`] = `
<body>
  <div>
    <div>
      <input
        class="linearslider"
        id="linearrangeinput"
        max="1000"
        min="1"
        type="range"
        value="0"
      />
      <label
        class="LinearRangeLabel"
        id="lrclabel"
      />
    </div>
  </div>
</body>
`;

exports[`LinearInputControl Update View with value should work 1`] = `
<body>
  <div>
    <div>
      <input
        class="linearslider"
        id="linearrangeinput"
        max="1000"
        min="1"
        type="range"
        value="0"
      />
      <label
        class="LinearRangeLabel"
        id="lrclabel"
      >
        0
      </label>
    </div>
  </div>
</body>
`;
